# Oschertator-2nd-Brain-OS

./: CLAUDE.md  README.md  constitution.md  plan.md  podman-compose.yaml  spec.md  tasks.md  test-plan.md
backend/: .env.example  Dockerfile.preview.vibeflow  pyproject.toml
backend/.pytest_cache/v/cache/: nodeids
backend/src/: __init__.py  main.py
backend/src/vault_tab/api/: oschertator.py  routes.py
backend/src/vault_tab/core/: __init__.py  graph_index.py  llm.py  parser.py  runner.py  skills.py  vault.py
backend/src/vault_tab/tests/: test_graph_index.py  test_parser.py  test_skills.py  test_vault.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: CenterPanel.tsx  GraphCanvas.tsx  LeftCol.tsx  MetricCard.tsx  MicroLabel.tsx  OschertatorWidget.tsx  PreviewOverlay.tsx  RightCol.tsx  StatusPill.tsx  TopBar.tsx
frontend/src/styles/: app.css  tokens.css
frontend/src/utils/: api.ts
