[project]
name = "oschertor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "websockets>=14",
    "markdown-it-py>=3.0",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "openai>=1.0",
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "python-multipart>=0.0.20",
    "jinja2>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/vault_tab/tests"]
markers = [
    "live: hits real LLM endpoint (deselect with '-m \"not live\"')",
]
